# SMEAR-

./: README.md
Desktop/PROJECTS/AgroSense-AI/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  mock_backend.py  pyproject.toml
Desktop/PROJECTS/AgroSense-AI/backend/: Dockerfile  main.py  requirements.txt
Desktop/PROJECTS/AgroSense-AI/backend/app/core/: config.py  database.py  logging.py  security.py
Desktop/PROJECTS/AgroSense-AI/backend/app/schemas/: auth.py  crop.py  rainfall.py  risk.py
Desktop/PROJECTS/AgroSense-AI/backend/app/services/: alert_service.py  crop_service.py  rainfall_service.py  risk_service.py
Desktop/PROJECTS/AgroSense-AI/backend/app/utils/: seed_data.py
Desktop/PROJECTS/AgroSense-AI/dashboard/: Dockerfile  app.py
Desktop/PROJECTS/AgroSense-AI/infra/postgres/: init.sql
Desktop/PROJECTS/AgroSense-AI/ml/module1_rainfall/: predict.py  train.py
Desktop/PROJECTS/AgroSense-AI/ml/module2_crop/: predict.py  train.py
Desktop/PROJECTS/AgroSense-AI/ml/module3_risk/: predict.py  train.py
Desktop/PROJECTS/AgroSense-AI/web/: package-lock.json  package.json  tailwind.config.js
Desktop/PROJECTS/AgroSense-AI/web/src/: App.tsx  index.css
Desktop/PROJECTS/AgroSense-AI/web/src/components/: MapViewer.tsx  MetricCard.tsx  Sidebar.tsx
Desktop/PROJECTS/AgroSense-AI/web/src/context/: AuthContext.tsx
Desktop/PROJECTS/AgroSense-AI/web/src/pages/: AlertControl.tsx  Billing.tsx  CropAdvisory.tsx  Dashboard.tsx  Forecasting.tsx  Login.tsx  Register.tsx
Desktop/PROJECTS/AgroSense-AI/web/src/utils/: api.ts
(+73 files in other folders)
