[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agrosense-ai"
version = "1.0.0"
description = "Intelligent Crop & Climate Risk Platform for Vidarbha, Maharashtra"
authors = [{ name = "AgroSense AI Team" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["agriculture", "climate", "machine-learning", "rainfall-forecasting", "india", "vidarbha"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["backend/app", "ml"]
omit = ["tests/*", "**/__init__.py"]
